more trying to fix

--- a/wa/wa2.html
+++ b/wa/wa2.html
@@ -17,7 +17,7 @@
             <a href = "https://www.youtube.com/watch?v=QX43QTYyV-8"> Fish Dance</a>`
         </div>
         <div style="margin-left: 50%; height: 100%; background: black;"> 
-            <a href = "../img/image_123927839.JPG"><img src = "../img/image_123927839.jpg" style = "height:1008px; width:756px;" alt="me and me mom"></a>
+            <a href = "../img/image_123927839.JPG"><img src = "../img/image_123927839.JPG" style = "height:1008px; width:756px;" alt="me and me mom"></a>
         </div>
     </div>
     
