minor w3 validation issue fix

--- a/wa/encyclopedia.html
+++ b/wa/encyclopedia.html
@@ -39,7 +39,7 @@
         <section id = "etymology">
             <div style = "width: 30%; float: right;">
                 <figure>
-                <img src="../img/scrunklyDog.jpg" style = "float: center; height: 256px; width: 256px" alt = "scrunkly dog">
+                <img src="../img/scrunklyDog.jpg" style = " height: 256px; width: 256px" alt = "scrunkly dog">
                 <figcaption>A <b>scrunkly</b> dog</figcaption>
                 </figure>
             </div>
