--- a/wa/wa3.html
+++ b/wa/wa3.html
@@ -57,7 +57,7 @@
         </section>
         <section id = "adjective">
             <h3>Adjective</h3>
-            <p> <b>scrunkly</b> (<a href = "https://en.wiktionary.org/wiki/Appendix:Glossary#comparative">comparative</a> <a href = "https://en.wiktionary.org/wiki/scrunklier#English">scrunklier</a>, <a href = "https://en.wiktionary.org/wiki/Appendix:Glossary#superlative">superlative</a> <a href = "https://en.wiktionary.org/wiki/scrunkliest#English">skrunkliest</a>)</p>
+            <p> <b>scrunkly</b> (<a href = "https://en.wiktionary.org/wiki/Appendix:Glossary#comparative"><em>comparative</em></a> <a href = "https://en.wiktionary.org/wiki/scrunklier#English">scrunklier</a>, <a href = "https://en.wiktionary.org/wiki/Appendix:Glossary#superlative"><em>superlative</em></a> <a href = "https://en.wiktionary.org/wiki/scrunkliest#English">skrunkliest</a>)</p>
             <ol>
                 <li>
                     (<a href = "https://en.wiktionary.org/wiki/Internet" >Internet</a> <a href = "https://en.wiktionary.org/wiki/slang"> slang</a>) <a href = https://en.wiktionary.org/wiki/cute#Adjective>Cute</a> in a <a href = "https://en.wiktionary.org/wiki/quirky#Adjective">quirky</a>, <a href = "https://en.wiktionary.org/wiki/scruffy#Adjective">scruffy</a>, or <a href = "https://en.wiktionary.org/wiki/dishevelled#Adjective">dishevelled</a>
@@ -70,7 +70,7 @@
         </section>
         <section id = "noun">
             <h3>Noun</h3>
-            <p> <b>scrunkly</b> (plural <a href = https://en.wiktionary.org/wiki/scrunklies#English>scrunklies</a>) </p>
+            <p> <b>scrunkly</b> (<em>plural</em> <a href = https://en.wiktionary.org/wiki/scrunklies#English>scrunklies</a>) </p>
             <ol>
                 <li>
                     (<a href = "https://en.wiktionary.org/wiki/Internet" >Internet</a> <a href = "https://en.wiktionary.org/wiki/slang"> slang</a>, especially <a href = https://en.wiktionary.org/wiki/fandom >fandom</a> <a href = "https://en.wiktionary.org/wiki/slang"> slang</a>) A scrunkly person, animal, or thing.
