--- a/html-midterm/page5.html
+++ b/html-midterm/page5.html
@@ -43,13 +43,16 @@
     <section>
         <h2>Page 3.</h2>
         <ul>
-            <li></li>
+            <li>Missing &lt;!DOCTYPE html&gt;</li>
+            <li>Missing title</li>
+            <li>Footer has absolute position rather than relative or fixed</li>
         </ul>
     </section>
     <section>
         <h2>Page 4.</h2>
         <ul>
-            <li></li>
+            <li>Missing &lt;!DOCTYPE html&gt;</li>
+            <li>3 Missing &lt;td&gt;</li>
         </ul>
     </section>
     
