--- a/css-midterm/html/project.html
+++ b/css-midterm/html/project.html
@@ -7,9 +7,10 @@
     <title>Document</title>
 
 </head>
+
+
 <body>
-<h1>Colorado Symphony Classics <hr></hr>2022-2023</h1>
-<body>
+    <h1>Colorado Symphony Classics </h1><h1>2022-2023</h1>
     <div class="flex-container">
         <div class="flex-item"> <h2>Vivaldi's The Four Seasons</h2><h3>OCT14-16 FRI-SAT 7:30 SUN 1:00</h3>
             <div class = "flex-container">
@@ -351,6 +352,5 @@
     
         </div>
     </div>
-</body>
 </body>
 </html>
