--- a/wa/wa10/wa10.html
+++ b/wa/wa10/wa10.html
@@ -46,7 +46,7 @@
 
   <body>
     <div>
-      <label for="customname">Enter custom name:</label>
+      <label for="customname">Enter Author Name:</label>
       <input id="customname" type="text" placeholder="" />
     </div>
     <div>
