misc stuff for my home page

--- a/home.html
+++ b/home.html
@@ -24,7 +24,9 @@
         </div>
         <div class = "flex-item">
         <h2>Art</h2>
-
+        <p>Most of my art are collages I make in photoshop using magazines I collect from thrift shops. Some of the examples below are fictional movie posters or magazine covers I made for 
+            my design class. I also like to work in blender, however I'm still quite new to that medium. I also enjoy creative coding using libraries such as p5.js.
+        </p>
         </div>
         <div class = "flex-bod">
             
