--- a/home.html
+++ b/home.html
@@ -28,11 +28,35 @@
             my design class. I also like to work in blender, however I'm still quite new to that medium. I also enjoy creative coding using libraries such as p5.js.
         </p>
         </div>
-        <div class = "flex-bod">
+        <!--<div class = "flex-bod">
             
                 <img src = "/home/art/img/MAL/MAL-4.png">
                 <img src = "/home/art/img/MAL/WLG2REAL.png">
         
+            </div> !-->
+            <div class="wrapper">
+                <div class="carousel">
+                    <img src ="/home/imgs/IMGClass/1.png" alt="Painting Heads">
+                    <img src ="/home/imgs/IMGClass/proj9.png" alt="I've been asleep for weeks">
+                    <img src ="/home/imgs/IMGClass/FeelsLikeADream.png" alt="now everything feels like a dream">
+                    <img src ="/home/imgs/IMGClass/proj7.png" alt="why would I wake up?">
+                    <img src ="/home/imgs/IMGClass/JumpedInTooDeepREALFINAL.png" alt="I jumped in too deep">
+                    <img src ="/home/imgs/IMGClass/Iknowyouredownbad.png" alt="and I know youre down bad if youre reaching out to me">
+                    <img src ="/home/imgs/IMGClass/Proj8Insta.png" alt="dumb, jealous, confident, fake apology">
+                    <img src ="/home/imgs/IMGClass/ReachingOutToMe.png" alt="and I know youre down bad if youre reaching out to me">
+                    <img src ="/home/imgs/IMGClass/10.png" alt="dumb, jealous, confident, fake apology">
+                    <img src ="/home/imgs/IMGClass/honestly.png" alt="theres honestly not anything that you alone could do">
+                </div>
+            </div>
+            <div class="wrapper">
+                <div class="carousel">
+                    <img src ="" alt="">
+                </div>
+            </div>
+            <div class="wrapper">
+                <div class="carousel">
+                    <img src ="" alt="">
+                </div>
             </div>
     </div>
   </body>
