--- a/home.html
+++ b/home.html
@@ -6,6 +6,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.8.0/p5.js" integrity="sha512-bzpp8klYroR6PFgL3RJ+VkvY5hJna7Zd38OA56peUDHSNQpSiN9lDQVnMYtcw7hoAVhbR6mAOdH+ymzg1o+G0A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" type="text/css" href="home/style.css">
     <title>blaizun.com</title>
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <script src= "home/script.js" defer></script>
     <meta charset="utf-8" />
   </head>
   <body>
@@ -13,7 +15,7 @@
     <div>
     <h1>blaizun.com</h1>
     </div>
-    <div class = "flex-box">
+    <div >
         <div class = "flex-item">
             <h2>About me</h2>
         </div>
@@ -34,7 +36,9 @@
                 <img src = "/home/art/img/MAL/WLG2REAL.png">
         
             </div> !-->
+            <div class="flexbox">
             <div class="wrapper">
+                <i id = "left" class="fa-solid fa-angle-left"></i>
                 <div class="carousel">
                     <img src ="/home/imgs/IMGClass/1.png" alt="Painting Heads">
                     <img src ="/home/imgs/IMGClass/proj9.png" alt="I've been asleep for weeks">
@@ -47,6 +51,8 @@
                     <img src ="/home/imgs/IMGClass/10.png" alt="dumb, jealous, confident, fake apology">
                     <img src ="/home/imgs/IMGClass/honestly.png" alt="theres honestly not anything that you alone could do">
                 </div>
+                <i id = "right" class="fa-solid fa-angle-right"></i>
+            </div>
             </div>
             <div class="wrapper">
                 <div class="carousel">
@@ -58,6 +64,7 @@
                     <img src ="" alt="">
                 </div>
             </div>
+        
     </div>
   </body>
 </html>
