oops didnt save

--- a/home.html
+++ b/home.html
@@ -40,16 +40,16 @@
             <div class="wrapper">
                 <i id = "left" class="fa-solid fa-angle-left"></i>
                 <div class="carousel">
-                    <img src ="/home/imgs/IMGClass/1.png" alt="Painting Heads">
-                    <img src ="/home/imgs/IMGClass/proj9.png" alt="I've been asleep for weeks">
-                    <img src ="/home/imgs/IMGClass/FeelsLikeADream.png" alt="now everything feels like a dream">
-                    <img src ="/home/imgs/IMGClass/proj7.png" alt="why would I wake up?">
+                    <img src ="/home/imgs/IMGClass/1.png" alt="Painting Heads"  draggable = "false">
+                    <img src ="/home/imgs/IMGClass/proj9.png" alt="I've been asleep for weeks" draggable = "false">
+                    <img src ="/home/imgs/IMGClass/FeelsLikeADream.png" alt="now everything feels like a dream" draggable = "false">
+                    <img src ="/home/imgs/IMGClass/proj7.png" alt="why would I wake up?" draggable = "false">
                     <img src ="/home/imgs/IMGClass/JumpedInTooDeepREALFINAL.png" alt="I jumped in too deep">
-                    <img src ="/home/imgs/IMGClass/Iknowyouredownbad.png" alt="and I know youre down bad if youre reaching out to me">
-                    <img src ="/home/imgs/IMGClass/Proj8Insta.png" alt="dumb, jealous, confident, fake apology">
-                    <img src ="/home/imgs/IMGClass/ReachingOutToMe.png" alt="and I know youre down bad if youre reaching out to me">
-                    <img src ="/home/imgs/IMGClass/10.png" alt="dumb, jealous, confident, fake apology">
-                    <img src ="/home/imgs/IMGClass/honestly.png" alt="theres honestly not anything that you alone could do">
+                    <img src ="/home/imgs/IMGClass/Iknowyouredownbad.png" alt="and I know youre down bad if youre reaching out to me" draggable = "false">
+                    <img src ="/home/imgs/IMGClass/Proj8Insta.png" alt="dumb, jealous, confident, fake apology" draggable = "false">
+                    <img src ="/home/imgs/IMGClass/ReachingOutToMe.png" alt="and I know youre down bad if youre reaching out to me" draggable = "false">
+                    <img src ="/home/imgs/IMGClass/10.png" alt="dumb, jealous, confident, fake apology" draggable = "false">
+                    <img src ="/home/imgs/IMGClass/honestly.png" alt="theres honestly not anything that you alone could do" draggable = "false">
                 </div>
                 <i id = "right" class="fa-solid fa-angle-right"></i>
             </div>
