--- a/wa/wa12/wa12.html
+++ b/wa/wa12/wa12.html
@@ -8,23 +8,26 @@
     <title>Document</title>
 </head>
 <body>
+   
     <h1 id ="title"></h1>
-    <div class="app">
+
+    <div id = "lines">
+       
+    </div>
+    <section class="controls" >
+        <button type="button" id="js-new-quote" class="new-quote button">
+          New Poem
+        </button>
+        <!-- <a class="answer button" id="js-tweet" target="_blank" rel="noreferrer">Show me the answer!</a> -->
+      </section>
+   <!-- <div class="app">
         <header>Random Poem</header>
         <section class="quotes">
           <div class="quote-text" id="js-quote-text"></div>
           <div class="quote-text" id="js-answer-text"></div>
         </section>
-        <section class="controls" >
-          <button type="button" id="js-new-quote" class="new-quote button">
-            Generate a new bit of trivia!
-          </button>
-          <button type="button" id="js-tweet" class="twitter button">
-            Show me the answer!
-          </button>
-          <!-- <a class="answer button" id="js-tweet" target="_blank" rel="noreferrer">Show me the answer!</a> -->
-        </section>
-      </div>
-      <script src="wa12.js"></script>
+        
+      </div> -->
+      <script src="wa12.js"></script> 
 </body>
 </html>
