--- a/art/index.html
+++ b/art/index.html
@@ -8,6 +8,13 @@
     <title>Home</title>
 </head>
 <body>
+   
+    
+    <div id = "imageContainer" class = "cards">
+        
+    </div>
     <script src="script.js"></script>
 </body>
+
+</script>
 </html>
