resume page is up

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       { text: "blaizun.com", href: "#link5" },
       { text: "blaizun.com", href: "#link4" },
       { text: "blaizun.com/home", href: "#link3" },
-      { text: "blaizun.com/resume", href: "#link2" },
+      { text: "blaizun.com/resume", href: "resume/index.html" },
       { text: "blaizun.com/portfolio", href: "#link2" },
       { text: "blaizun.com/contact", href: "#link2" },
       { text: "blaizun.com/art", href: "#link2" },
