particle page works now

--- a/particleText/index.html
+++ b/particleText/index.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Particle Text</title>
+    <script type="importmap">
     		{
 				"imports": {
-					"three": "https://cdn.jsdelivr.net/npm/three@0.161.0/build/three.module.js",
+					"three": "https://cdnjs.cloudflare.com/ajax/libs/three.js/0.180.0/three.module.js",
                     "jsm/": "https://cdn.jsdelivr.net/npm/three@0.161.0/examples/jsm/",
-                    "dat.gui": "https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.9/dat.gui.js"
+                    "dat.gui": "../assets/dat.gui.module.js"
                 }
-			}
+			}   
+    </script>
 </head>
 <body>
   <div id="controls">
