--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       { text: "blaizun.com/contact", href: "#link2" },
       { text: "blaizun.com/art", href: "#link2" },
       { text: "blaizun.com/particleText", href: "/particleText/index.html" },
-      { text: "blaizun.com", href: "" },
+      { text: "blaizun.com/KEEBO", href: "/keebo/index.html" },
       { text: "blaizun.com", href: "" },
       { text: "blaizun.com", href: "" },
       { text: "blaizun.com", href: "" },
