fixing keebo svg reference

--- a/keebo/index.html
+++ b/keebo/index.html
@@ -134,7 +134,7 @@
             ground.receiveShadow = true;
             scene.add(ground);
             addSVGToGround('fishie.svg', 5, 5, -4,-1.45, 0,0,-Math.PI/2);
-            addSVGToGround('keebo.svg', 5, 5, 3,-1.45, 0,0,-Math.PI/2);
+            addSVGToGround('KEEBO.svg', 5, 5, 3,-1.45, 0,0,-Math.PI/2);
 
             //addSVGToGround('keebo.svg', 10, 10, 30,2, 0,-Math.PI/2,-Math.PI/2);    
             
