--- a/keebo/index.html
+++ b/keebo/index.html
@@ -40,7 +40,7 @@
 <body>
     <div id="info">
         <h2>KEEBO by Chad Holmes</h2>
-        <p>Drag to rotate • Scroll to zoom <br> Spacebar to kickflip</p>
+        <p>Drag to rotate • Scroll to zoom</p>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
