--- a/resume/index.html
+++ b/resume/index.html
@@ -11,6 +11,6 @@
 <body>
 <div id="my-pdf"></div>
 <script src="https://unpkg.com/pdfobject"></script>
-<script>PDFObject.embed("BlaizunDiamondResume.pdf", "#my-pdf");</script>
+<script>PDFObject.embed("BlaizunDiamond.pdf", "#my-pdf");</script>
 </body>
 </html>
