--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       { text: "blaizun.com/art", href: "#link2" },
       { text: "blaizun.com/particleText", href: "/particleText/index.html" },
       { text: "blaizun.com/KEEBO", href: "/keebo/index.html" },
-      { text: "blaizun.com/shellTexturing", href: "/shellTextuing/index.html" },
+      { text: "blaizun.com/shellTexturing", href: "/shellTexturing/index.html" },
       { text: "blaizun.com", href: "" },
       { text: "blaizun.com", href: "" },
       { text: "blaizun.com", href: "" },
