--- a/particleText/index.html
+++ b/particleText/index.html
@@ -16,6 +16,15 @@
     </script>
 </head>
 <body>
+        <div class="glass-overlay" id="glassOverlay"></div>
+    <a href="../index.html" class="back-home-btn" id="backHomeBtn">
+    <span class="arrow">
+        <svg viewBox="0 0 24 24">
+            <path d="M19 12H5M12 19l-7-7 7-7"/>
+        </svg>
+    </span>
+    <span>Back Home</span>
+    </a>
   <div id="controls">
         <div>Enter text:</div>
         <input type="text" id="textInput" value="HELLO" maxlength="10">
