--- a/shellTexturing/index.html
+++ b/shellTexturing/index.html
@@ -5,44 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wind Waker Style Grass - Sphere Shell Texturing</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.9/dat.gui.min.js"></script>
-<style>
-        body {
-            margin: 0;
-            overflow: hidden;
-            background: #ffffff;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-        }
-        canvas {
-            display: block;
-        }
-        #info {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            color: #333;
-            font-size: 14px;
-            background: rgba(255, 255, 255, 0.9);
-            padding: 15px 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-        }
-        #info h2 {
-            margin: 0 0 10px 0;
-            font-size: 18px;
-            font-weight: 600;
-        }
-        #info p {
-            margin: 5px 0;
-            font-size: 13px;
-            color: #666;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <div class="glass-overlay" id="glassOverlay"></div>
+    <a href="../index.html" class="back-home-btn" id="backHomeBtn">
+    <span class="arrow">
+        <svg viewBox="0 0 24 24">
+            <path d="M19 12H5M12 19l-7-7 7-7"/>
+        </svg>
+    </span>
+    <span>Back Home</span>
+    </a>
     <canvas id="canvas"></canvas>
 
 
     <script>
+
+        //Back button
+        const backHomeBtn = document.getElementById('backHomeBtn');
+        const glassOverlay = document.getElementById('glassOverlay');
+
+        backHomeBtn.addEventListener('mouseenter', () => {
+            glassOverlay.classList.add('active');
+        });
+
+        backHomeBtn.addEventListener('mouseleave', () => {
+            glassOverlay.classList.remove('active');
+        });
+        ///////////////
+
         const canvas = document.getElementById('canvas');
         const gl = canvas.getContext('webgl');
         
