--- a/shellTexturing/index.html
+++ b/shellTexturing/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wind Waker Style Grass - Sphere Shell Texturing</title>
+    <title>Shell Texturing</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.9/dat.gui.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
