updating homepage link

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       { text: "blaizun.com/resume", href: "resume/index.html" },
       { text: "blaizun.com/portfolio", href: "#link2" },
       { text: "blaizun.com/contact", href: "#link2" },
-      { text: "blaizun.com/art", href: "#link2" },
+      { text: "blaizun.com/art", href: "/art/index.html" },
       { text: "blaizun.com/particleText", href: "/particleText/index.html" },
       { text: "blaizun.com/KEEBO", href: "/keebo/index.html" },
       { text: "blaizun.com/shellTexturing", href: "/shellTexturing/index.html" },
