--- a/art/index.html
+++ b/art/index.html
@@ -46,7 +46,7 @@
             { url: 'assets/art/Charlesvol2.png', aspect: 'square' },
             { url: 'assets/art/Charlesvol1.png', aspect: 'square' },
             { url: 'assets/art/Charlesvol3.png', aspect: 'square' },
-            { url: 'assets/art/homeInvasion.png', aspect: 'square' },
+            { url: 'assets/art/HomeInvasion.png', aspect: 'square' },
             { url: 'assets/art/FlowerFarmer.png', aspect: 'square' },
             { url: 'assets/art/KingofRing1.png', aspect: 'square' },
             { url: 'assets/art/MAL-1.png', aspect: 'square' },
@@ -55,14 +55,14 @@
             { url: 'assets/art/MAL-4.png', aspect: 'square' },
             { url: 'assets/art/pugnate2.png', aspect: 'square' },
             { url: 'assets/art/WheelsFallOffFinal.png', aspect: 'square' },
-            { url: 'assets/art/windmills3.png', aspect: 'square' },
+            { url: 'assets/art/Windmills3.png', aspect: 'square' },
             { url: 'assets/art/WLG2REAL.png', aspect: 'square' },
             { url: 'assets/work/SwankyCover-1.jpg', aspect: 'tall' },
             { url: 'assets/art/ItsAllUnderControl.png', aspect: 'square' },
             { url: 'assets/art/happyguppy.png', aspect: 'wide' },
             { url: 'assets/art/BreakupFINAL.png', aspect: 'square' },
             { url: 'assets/IMGClass/1.png', aspect: 'square' },
-            { url: 'assets/work/cruelOilBlaizunDiamond.jpg', aspect: 'tall' },
+            { url: 'assets/work/CruelOilBlaizunDiamond.jpg', aspect: 'tall' },
             { url: 'assets/IMGClass/8.png', aspect: 'square' },
             { url: 'assets/IMGClass/DumbJealous.png', aspect: 'wide' },
             { url: 'assets/IMGClass/FeelsLikeADream.png', aspect: 'square' },
